syntax = "proto3";

package kessel.inventory.v1beta2;

import "google/api/annotations.proto";
import "kessel/inventory/v1beta2/lookup_resources_request.proto";
import "kessel/inventory/v1beta2/lookup_resources_response.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta2";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta2";

service KesselLookupService {
  rpc LookupResources(LookupResourcesRequest) returns (stream LookupResourcesResponse) {
    option (google.api.http) = {
      get: "/api/inventory/v1beta2/resources"
    };
  }
}
